# transcript-pipeline

./: .gitignore  LICENSE  README.md  manifest.yml  pyproject.toml
docs/: SPEC.md
tests/: conftest.py  test_aligned_cosine.py  test_batch_perf.py  test_classifier.py  test_compute_with_labels.py  test_confirm.py  test_embeddings.py  test_html_renderer.py  test_round_trip.py  test_skool_renderer.py  test_v0_5_2.py  test_validator.py  test_weaver.py  test_window_classifier.py
tests/fixtures/: labeled_100.json
tools/: v0_5_screenshots.py  v0_5_visual_check.py
transcript_pipeline/: __init__.py  carry_detector.py  classifier.py  cli.py  confirm.py  diagnostics.py  embedder.py  embeddings.py  html_renderer.py  mcp_server.py  parser.py  prompts.py  renderer.py  runtime.py  schema.py  skool_renderer.py  temporal_weaver.py  validator.py  window_classifier.py  woven_jsonl.py
transcript_pipeline/adapters/: __init__.py  cc_jsonl.py  claude_web.py  gpt.py
