[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-pipeline"
version = "0.4.0"
description = "Multi-agent chat log -> structured transcript -> video-ready render. Format spec v1.0."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Adam Thomas", email = "adam@ghostlogic.dev" }]
dependencies = [
    "maelspine>=0.1.1",
    "pyyaml>=6.0",
    "fastmcp>=2.0",
    "anthropic>=0.50",
    "openai>=1.50",
    "tiktoken>=0.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
transcript = "transcript_pipeline.cli:main"
transcript-mcp = "transcript_pipeline.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["transcript_pipeline*"]
